Fix avr-atmega128rfa1 port builds to play nicely with #173

--- a/platform/avr-atmega128rfa1/Makefile.avr-atmega128rfa1
+++ b/platform/avr-atmega128rfa1/Makefile.avr-atmega128rfa1
@@ -28,6 +28,9 @@ AVRDUDE_PORT=usb:00B000000D79
 AVRDUDE_OPTIONS=-V
 AVRDUDE_MCU=m128rfa1
 
+ifeq ($(UIP_CONF_IPV6),1)
+  CFLAGS += -DUIP_CONF_IPV6=1
+endif
 
 include $(CONTIKIAVR)/Makefile.avr
 include $(CONTIKIAVR)/radio/Makefile.radio
