Fix er-rest-example to play nicely with #173

--- a/examples/er-rest-example/Makefile
+++ b/examples/er-rest-example/Makefile
@@ -13,6 +13,7 @@ endif
 WITH_UIP6=1
 # for some platforms
 UIP_CONF_IPV6=1
+CFLAGS+= -DUIP_CONF_IPV6_RPL
 
 # radio configuration
 #CFLAGS += -DRF_CHANNEL=20
